# Customer-Support-Assistant

./: .gitignore  app.py  config.py  llm_client.py  main.py  pyproject.toml  requirements.txt
agent/: agent.py  system_prompt.py
api/: routes.py  schemas.py
data/: customers.py  orders.py  refunds.py  returns.py
rag/: ingestion.py  retrieval_service.py
services/: order_service.py  refund_service.py  return_service.py
tools/: check_refund_status_tool.py  check_return_status_tool.py  create_refund_tool.py  create_return_tool.py  knowledge_base.py  order_tool.py
